--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^0.26.7",
     "glob": "^7.0.3",
     "jade": "^1.11.0",
-    "rho": "^0.2.4"
+    "rho": "^0.2.4",
+    "stylus": "^0.54.2"
   }
 }
