--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "front-matter": "^2.0.6",
+    "front-matter": "^2.0.7",
     "fs-extra": "^0.26.7",
     "glob": "^7.0.3",
     "jade": "^1.11.0",
+    "pad-left": "^2.0.3",
     "rho": "^0.2.4",
+    "slug": "^0.9.1",
     "stylus": "^0.54.2"
+  },
+  "devDependencies": {
+    "typescript": "^1.8.9"
   }
 }
