--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^0.20.0",
     "front-matter": "^2.0.7",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
