More material design additions and...
…date time formatting support on templates via moment.js

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "glob": "^7.0.3",
     "httpreq": "^0.4.22",
     "jade": "^1.11.0",
+    "moment": "^2.13.0",
     "pad-left": "^2.1.0",
     "rho": "^0.2.4",
     "slug": "^0.9.1",
