--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "glob": "^7.0.4",
     "httpreq": "^0.4.22",
     "jade": "^1.11.0",
+    "mime": "^1.3.4",
     "moment": "^2.13.0",
     "pad-left": "^2.1.0",
     "rho": "^0.2.4",
+    "sharp": "^0.15.0",
     "slug": "^0.9.1",
     "string": "^3.3.1",
     "stylus": "^0.54.5"
