--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -32,8 +32,7 @@
     "rho": "^0.2.4",
     "sharp": "^0.15.0",
     "slug": "^0.9.1",
-    "string": "^3.3.1",
-    "stylus": "^0.54.5"
+    "string": "^3.3.1"
   },
   "devDependencies": {
     "typescript": "^1.8.10"
