--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pad-left": "^2.1.0",
     "rho": "^0.2.4",
     "sharp": "^0.15.1",
+    "sitemap": "^1.8.0",
     "slug": "^0.9.1",
     "string": "^3.3.1"
   },
