feat(build): Add a proper compile system
User can use `dev:compile` and `dev:typings` tasks to compile
typescript into javascript. This tasks are also run automatically
before publishing the package.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
     "removeComments": true,
     "inlineSourceMap": true,
     "inlineSources": false,
-    "outDir": "./.tmp"
+    "outDir": "./build"
   },
   "exclude": [
     "node_modules",
-    ".tmp"
+    "build"
   ]
 }
