--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -20,6 +20,7 @@
     "taxonomy"
   ],
   "license": "MIT",
+  "preferGlobal": true,
   "dependencies": {
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
@@ -36,10 +37,13 @@
     "string": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^1.8.10"
+    "shx": "^0.1.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2"
   },
   "scripts": {
-    "prepublish": "./node_modules/.bin/tsc",
-    "dev:compile": "./node_modules/.bin/tsc"
+    "prepublish": "npm run dev:compile && npm run dev:typings",
+    "dev:compile": "./node_modules/.bin/shx rm -rf build && ./node_modules/.bin/tsc",
+    "dev:typings": "./node_modules/.bin/shx rm -rf typings  && ./node_modules/.bin/typings install"
   }
 }
