--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -19,22 +19,27 @@
     "collections",
     "taxonomy"
   ],
-  "bin": "build/app/index.js",
+  "bin": "build/app/cli.js",
+  "main": "build/app/index.js",
   "license": "MIT",
   "preferGlobal": true,
   "dependencies": {
+    "chalk": "^1.1.3",
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "jade": "^1.11.0",
+    "liftoff": "^2.3.0",
     "mime": "^1.3.4",
     "moment": "^2.14.1",
     "pad-left": "^2.1.0",
     "rho": "^0.2.4",
+    "semver": "^5.3.0",
     "sharp": "^0.15.1",
     "sitemap": "^1.8.1",
     "slug": "^0.9.1",
-    "string": "^3.3.1"
+    "string": "^3.3.1",
+    "tildify": "^1.2.0"
   },
   "devDependencies": {
     "shx": "^0.1.2",
