--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -28,11 +28,14 @@
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
+    "inversify": "^2.0.0-rc.10",
+    "inversify-binding-decorators": "^1.0.0-rc.2",
     "jade": "^1.11.0",
     "liftoff": "^2.3.0",
     "mime": "^1.3.4",
     "moment": "^2.14.1",
     "pad-left": "^2.1.0",
+    "reflect-metadata": "^0.1.8",
     "rho": "^0.2.4",
     "semver": "^5.3.0",
     "sharp": "^0.15.1",
@@ -42,14 +45,21 @@
     "tildify": "^1.2.0"
   },
   "devDependencies": {
-    "shx": "^0.1.2",
+    "inversify-dts": "^2.0.0",
+    "inversify-inject-decorators": "^1.0.0-beta.1",
+    "istanbul": "^0.4.4",
+    "mocha": "^3.0.2",
+    "remap-istanbul": "^0.6.4",
+    "shx": "^0.1.3",
+    "sinon": "^1.17.5",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
   "scripts": {
     "prepublish": "npm run dev:compile && npm run dev:typings",
-    "dev:compile": "./node_modules/.bin/shx rm -rf build && ./node_modules/.bin/tsc",
-    "dev:typings": "./node_modules/.bin/shx rm -rf typings && ./node_modules/.bin/typings install"
+    "dev:compile": "shx rm -rf build && tsc",
+    "dev:typings": "shx rm -rf typings && typings install",
+    "test": "istanbul cover _mocha build/test/**/*.js && remap-istanbul --input coverage/coverage.json --output coverage/typescript-html --type html"
   },
   "engines": {
     "node": ">=6.3.1"
