--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: node_js
-env:
-  - CXX=g++-4.8
 node_js:
   - "6"
+os:
+  - linux
+  - osx
+sudo: false
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+osx_image: xcode8
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8; fi
 install:
   - npm update
   - npm install
