--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tildify": "^1.2.0"
   },
   "devDependencies": {
+    "coveralls": "^2.11.12",
     "inversify-dts": "^2.0.0",
     "inversify-inject-decorators": "^1.0.0-beta.1",
     "istanbul": "^0.4.4",
@@ -59,7 +60,7 @@
     "prepublish": "npm run dev:typings && npm run dev:compile",
     "dev:compile": "shx rm -rf build && tsc",
     "dev:typings": "shx rm -rf typings && typings install",
-    "test": "istanbul cover _mocha build/test/**/*.js && remap-istanbul --input coverage/coverage.json --output coverage/typescript-html --type html"
+    "test": "istanbul cover _mocha build/test/**/*.js && remap-istanbul --input coverage/coverage.json --output coverage/typescript-html --type html && remap-istanbul --input coverage/coverage.json --output coverage/typescript-lcov.info --type json"
   },
   "engines": {
     "node": ">=6.3.1"
