--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install homebrew/science/vips --with-webp; fi
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  - cat ./coverage/typescript-lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - ./node_modules/.bin/codecov -f coverage/coverage.json
+  - cat ./coverage/typescript-lcov.info | ./node_modules/.bin/coveralls
 install:
   - npm update
   - npm install
