--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tildify": "^1.2.0"
   },
   "devDependencies": {
+    "codecov": "^1.0.1",
     "coveralls": "^2.11.12",
     "inversify-dts": "^2.0.0",
     "inversify-inject-decorators": "^1.0.0-beta.1",
