--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "inversify-inject-decorators": "^1.0.0-beta.1",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
+    "nyc": "^8.1.0",
     "remap-istanbul": "^0.6.4",
     "shx": "^0.1.3",
     "sinon": "^1.17.5",
@@ -61,9 +62,19 @@
     "prepublish": "npm run dev:typings && npm run dev:compile",
     "dev:compile": "shx rm -rf build && tsc",
     "dev:typings": "shx rm -rf typings && typings install",
-    "test": "istanbul cover _mocha build/test/**/*.js && remap-istanbul --input coverage/coverage.json --output coverage/typescript-html --type html && remap-istanbul --input coverage/coverage.json --output coverage/typescript.json --type json && remap-istanbul --input coverage/coverage.json --output coverage/typescript-lcov.info --type lcovonly"
+    "test": "nyc mocha build/test/**/*.js"
   },
   "engines": {
     "node": ">=6.3.1"
+  },
+  "nyc": {
+    "include": [
+      "build/app/**"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "json"
+    ]
   }
 }
