--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   "preferGlobal": true,
   "dependencies": {
     "chalk": "^1.1.3",
+    "debug": "^2.2.0",
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "inversify": "^2.0.0-rc.10",
     "inversify-binding-decorators": "^1.0.0-rc.2",
-    "jade": "^1.11.0",
     "liftoff": "^2.3.0",
     "mime": "^1.3.4",
     "moment": "^2.14.1",
     "pad-left": "^2.1.0",
+    "pug": "^2.0.0-beta5",
     "reflect-metadata": "^0.1.8",
     "rho": "^0.2.4",
     "semver": "^5.3.0",
@@ -52,6 +53,7 @@
     "nyc": "^8.1.0",
     "shx": "^0.1.3",
     "sinon": "^1.17.5",
+    "tslint": "^3.14.0",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
@@ -59,7 +61,8 @@
     "prepublish": "npm run dev:typings && npm run dev:compile",
     "dev:compile": "shx rm -rf build && tsc",
     "dev:typings": "shx rm -rf typings && typings install",
-    "test": "nyc mocha build/test/**/*.js"
+    "test": "nyc mocha build/test/**/*.js",
+    "lint": "tslint --project=tslint.json"
   },
   "engines": {
     "node": ">=6.3.1"
