refactor(core): Refactor whole project to conform tslint rules
1. We have tslint.
2. We have DI.
3. We have one test, proof of concept.
4. We have cove coverage set up and ready to go.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "declaration": false,
     "noImplicitAny": false,
     "removeComments": true,
-    "inlineSourceMap": true,
+    "inlineSourceMap": false,
     "inlineSources": false,
+    "sourceMap": true,
     "outDir": "./build",
     "rootDir": "."
   },
