--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "0.0.8",
+  "version": "1.0.0",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -25,7 +25,6 @@
   "preferGlobal": true,
   "dependencies": {
     "chalk": "^1.1.3",
-    "debug": "^2.2.0",
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
@@ -37,13 +36,16 @@
     "pad-left": "^2.1.0",
     "pug": "^2.0.0-beta5",
     "reflect-metadata": "^0.1.8",
+    "require-all": "^2.0.0",
     "rho": "^0.2.4",
     "semver": "^5.3.0",
-    "sharp": "^0.15.1",
+    "sharp": "^0.16.0",
     "sitemap": "^1.8.1",
     "slug": "^0.9.1",
+    "source-map": "^0.5.6",
     "string": "^3.3.1",
-    "tildify": "^1.2.0"
+    "tildify": "^1.2.0",
+    "tracer": "^0.8.3"
   },
   "devDependencies": {
     "codecov": "^1.0.1",
@@ -51,7 +53,7 @@
     "inversify-inject-decorators": "^1.0.0-beta.1",
     "mocha": "^3.0.2",
     "nyc": "^8.1.0",
-    "shx": "^0.1.3",
+    "shx": "^0.1.4",
     "sinon": "^1.17.5",
     "tslint": "^3.14.0",
     "typescript": "^1.8.10",
@@ -61,7 +63,7 @@
     "prepublish": "npm run dev:typings && npm run dev:compile",
     "dev:compile": "shx rm -rf build && tsc",
     "dev:typings": "shx rm -rf typings && typings install",
-    "test": "nyc mocha build/test/**/*.js",
+    "test": "nyc mocha build/test/temporaryTestAreaUntilIWriteSomeRealTest/**/*.js",
     "lint": "tslint --project=tslint.json"
   },
   "engines": {
