--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install homebrew/science/vips --with-webp; fi
 after_success:
-  - ./node_modules/.bin/codecov -f coverage/coverage-final.json
+  - codecov -f coverage/coverage-final.json
+  - bithound check git@github.com:ubenzer/fil.git
 install:
   - npm update
   - npm install
