--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "reflect-metadata": "^0.1.8",
     "require-all": "^2.0.0",
     "rho": "^0.2.4",
+    "rxjs": "^5.0.0-beta.11",
     "semver": "^5.3.0",
     "sharp": "^0.16.0",
     "sitemap": "^1.8.1",
