--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -25,17 +25,19 @@
   "preferGlobal": true,
   "dependencies": {
     "chalk": "^1.1.3",
+    "chokidar": "^1.6.0",
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
-    "glob": "^7.0.5",
+    "glob": "^7.0.6",
     "inversify": "^2.0.0",
     "inversify-binding-decorators": "^2.0.0",
     "inversify-inject-decorators": "^2.0.0",
     "liftoff": "^2.3.0",
     "mime": "^1.3.4",
-    "moment": "^2.14.1",
+    "minimist": "^1.2.0",
+    "moment": "^2.15.0",
     "pad-left": "^2.1.0",
-    "pug": "^2.0.0-beta5",
+    "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "require-all": "^2.0.0",
     "rho": "^0.2.4",
@@ -52,12 +54,12 @@
   "devDependencies": {
     "codecov": "^1.0.1",
     "mocha": "^3.0.2",
-    "nyc": "^8.1.0",
+    "nyc": "^8.3.0",
     "shx": "^0.1.4",
     "sinon": "^1.17.5",
-    "tslint": "^3.14.0",
+    "tslint": "^3.15.1",
     "typescript": "^2.0.0",
-    "typings": "^1.3.2"
+    "typings": "^1.3.3"
   },
   "scripts": {
     "prepublish": "npm run dev:typings && npm run dev:compile",
