--- a/package.json
+++ b/package.json
@@ -25,38 +25,38 @@
   "preferGlobal": true,
   "dependencies": {
     "chalk": "^1.1.3",
-    "chokidar": "^1.6.0",
+    "chokidar": "^1.6.1",
     "front-matter": "^2.1.0",
     "fs-extra": "^0.30.0",
-    "glob": "^7.1.0",
-    "inversify": "^2.0.0",
+    "glob": "^7.1.1",
+    "inversify": "^2.0.1",
     "inversify-binding-decorators": "^2.0.0",
     "inversify-inject-decorators": "^2.0.0",
     "mime": "^1.3.4",
     "minimist": "^1.2.0",
-    "moment": "^2.15.1",
+    "moment": "^2.15.2",
     "pad-left": "^2.1.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "require-all": "^2.0.0",
-    "rho": "^0.2.4",
-    "rxjs": "^5.0.0-beta.12",
-    "sharp": "^0.16.0",
-    "sitemap": "^1.8.1",
+    "rho": "^0.3.0",
+    "rxjs": "^5.0.0-rc.1",
+    "sharp": "^0.16.2",
+    "sitemap": "^1.8.2",
     "slug": "^0.9.1",
     "source-map": "^0.5.6",
-    "string": "^3.3.1",
+    "string": "^3.3.3",
     "tildify": "^1.2.0",
     "tracer": "^0.8.3"
   },
   "devDependencies": {
     "codecov": "^1.0.1",
-    "mocha": "^3.1.0",
-    "nyc": "^8.3.0",
+    "mocha": "^3.1.2",
+    "nyc": "^8.3.2",
     "shx": "^0.1.4",
     "sinon": "^1.17.6",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
+    "typescript": "^2.0.6",
     "typings": "^1.4.0"
   },
   "scripts": {
@@ -67,7 +67,7 @@
     "lint": "tslint --project=tslint.json"
   },
   "engines": {
-    "node": ">=6.5.0"
+    "node": ">=6.8.1"
   },
   "nyc": {
     "include": [
