--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fil",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "A static site generator",
   "author": "Umut Benzer <umut@benzer.me>",
   "repository": {
@@ -34,13 +34,13 @@
     "inversify-inject-decorators": "^2.0.0",
     "mime": "^1.3.4",
     "minimist": "^1.2.0",
-    "moment": "^2.15.2",
+    "moment": "^2.16.0",
     "pad-left": "^2.1.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "require-all": "^2.0.0",
     "rho": "^0.3.0",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "^5.0.0-rc.3",
     "sharp": "^0.16.2",
     "sitemap": "^1.8.2",
     "slug": "^0.9.1",
@@ -50,14 +50,15 @@
     "tracer": "^0.8.7"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
     "codecov": "^1.0.1",
     "mocha": "^3.1.2",
-    "nyc": "^8.4.0",
-    "shx": "^0.1.4",
+    "nyc": "^9.0.1",
+    "shx": "^0.2.0",
     "sinon": "^1.17.6",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.6",
-    "typings": "^1.5.0"
+    "typescript": "^2.0.10",
+    "typings": "^2.0.0"
   },
   "scripts": {
     "prepublish": "npm run dev:typings && npm run dev:compile",
