--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "inversify-inject-decorators": "^2.0.0",
     "mime": "^1.3.4",
     "minimist": "^1.2.0",
-    "moment": "^2.17.0",
+    "moment": "^2.17.1",
     "pad-left": "^2.1.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
@@ -65,7 +65,8 @@
     "dev:compile": "shx rm -rf build && tsc",
     "dev:typings": "shx rm -rf typings && typings install",
     "test": "nyc mocha './{,!(node_modules)/**/}*.test.js'",
-    "lint": "tslint --project=tslint.json"
+    "lint": "tslint --project=tslint.json",
+    "lint:fix": "tslint --project=tslint.json --fix"
   },
   "engines": {
     "node": ">=6.8.1"
